update(falco): add new configuration entries for Falco
This commit adds new config keys introduces in Falco 0.39.0.
Furthermore, updates the unit tests for the latest changes
in the values.yaml.

Signed-off-by: Aldo Lacuku <aldo@lacuku.eu>

--- a/charts/falco/Chart.yaml
+++ b/charts/falco/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: falco
-version: 4.8.3
-appVersion: "0.38.2"
+version: 4.9.0
+appVersion: "0.39.0-rc2"
 description: Falco
 keywords:
   - monitoring
