Use the `protocol` value from Values for `OTLP_TRACES_PROTOCOL`
Signed-off-by: Carl Reid <33623601+carlreid@users.noreply.github.com>

--- a/charts/falcosidekick/templates/secrets.yaml
+++ b/charts/falcosidekick/templates/secrets.yaml
@@ -463,7 +463,7 @@ data:
 
   # OTLP Traces
   OTLP_TRACES_ENDPOINT: "{{ .Values.config.otlp.traces.endpoint | b64enc}}"
-  OTLP_TRACES_PROTOCOL: "{{ .Values.config.otlp.traces.endpoint | b64enc}}"
+  OTLP_TRACES_PROTOCOL: "{{ .Values.config.otlp.traces.protocol | b64enc}}"
   OTLP_TRACES_TIMEOUT: "{{ .Values.config.otlp.traces.timeout | toString | b64enc}}"
   OTLP_TRACES_HEADERS: "{{ .Values.config.otlp.traces.headers | b64enc}}"
   OTLP_TRACES_SYNCED: "{{ .Values.config.otlp.traces.synced | printf "%t" | b64enc}}"
