feat(helm): Add Elasticsearch enablecompression setting
Signed-off-by: Erwan Grooters <grooters.erwan@gmail.com>

--- a/charts/falcosidekick/values.yaml
+++ b/charts/falcosidekick/values.yaml
@@ -300,9 +300,10 @@ config:
     minimumpriority: ""
     # -- Optional ingest pipeline name. Documentation: https://www.elastic.co/guide/en/elasticsearch/reference/current/ingest.html
     pipeline: ""
-
     # -- Max number of concurrent requests
     maxconcurrentrequests: 1
+    # -- Enables gzip compression
+    enablecompression: false
 
   influxdb:
     # -- Influxdb <http://host:port>, if not `empty`, Influxdb is *enabled*
