Fix customConfig template in configmap-ui.yaml
Signed-off-by: krkjack <56771214+krkjack@users.noreply.github.com>

--- a/charts/falcosidekick/templates/configmap-ui.yaml
+++ b/charts/falcosidekick/templates/configmap-ui.yaml
@@ -9,7 +9,7 @@ metadata:
     {{- include "falcosidekick.labels" . | nindent 4 }}
     app.kubernetes.io/component: ui-redis
 data:
-  {{- if .Values.webui.redis.customConfig -}}
+  {{- if .Values.webui.redis.customConfig }}
   redis-stack.config: |-
     {{ range .Values.webui.redis.customConfig }}
     {{- . }}
