--- a/charts/falco-talon/templates/clusterrole.yaml
+++ b/charts/falco-talon/templates/clusterrole.yaml
@@ -3,7 +3,7 @@
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ template "falco-talon.name" .}}
+  name: {{ template "falco-talon.fullname" .}}
   labels:
     {{- include "falco-talon.labels" . | nindent 4 }}
 rules:
@@ -12,7 +12,7 @@ rules:
     resources:
       - podsecuritypolicies
     resourceNames:
-      - {{ template "falco-talon.name" . }}
+      - {{ template "falco-talon.fullname" . }}
     verbs:
       - use
 {{- end }}
