--- a/charts/falco-talon/templates/podsecuritypolicy.yaml
+++ b/charts/falco-talon/templates/podsecuritypolicy.yaml
@@ -2,7 +2,7 @@
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  name: {{ template "falco-talon.name" . }}
+  name: {{ template "falco-talon.fullname" . }}
   labels:
     {{- include "falco-talon.labels" . | nindent 4 }}
 spec:
