--- a/charts/falco-talon/templates/rbac.yaml
+++ b/charts/falco-talon/templates/rbac.yaml
@@ -2,18 +2,18 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "falco-talon.name" . }}
-  namespace: {{ .Release.Namespace }}
+  name: {{ include "falco-talon.fullname" . }}
+  namespace: {{ include "falco-talon.namespace" . }}
   labels:
     {{- include "falco-talon.labels" . | nindent 4 }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "falco-talon.name" . }}
-  namespace: {{ .Release.Namespace }}
+  name: {{ include "falco-talon.fullname" . }}
+  namespace: {{ include "falco-talon.namespace" . }}
   labels:
-    app.kubernetes.io/name: {{ include "falco-talon.name" . }}
+    app.kubernetes.io/name: {{ include "falco-talon.fullname" . }}
     helm.sh/chart: {{ include "falco-talon.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
@@ -184,7 +184,7 @@ rules:
   resources:
     - podsecuritypolicies
   resourceNames:
-    - {{ template "falco-talon.name" . }}
+    - {{ template "falco-talon.fullname" . }}
   verbs:
     - use
 {{- end }}
@@ -192,18 +192,18 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "falco-talon.name" . }}
-  namespace: {{ .Release.Namespace }}
+  name: {{ include "falco-talon.fullname" . }}
+  namespace: {{ include "falco-talon.namespace" . }}
   labels:
-    app.kubernetes.io/name: {{ include "falco-talon.name" . }}
+    app.kubernetes.io/name: {{ include "falco-talon.fullname" . }}
     helm.sh/chart: {{ include "falco-talon.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ include "falco-talon.name" . }}
+  name: {{ include "falco-talon.fullname" . }}
 subjects:
 - kind: ServiceAccount
-  name: {{ include "falco-talon.name" . }}
+  name: {{ include "falco-talon.fullname" . }}
   namespace: {{ .Release.Namespace }}
