--- a/charts/falco-talon/templates/secrets.yaml
+++ b/charts/falco-talon/templates/secrets.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "falco-talon.name" . }}-config
+  name: {{ include "falco-talon.fullname" . }}-config
+  namespace: {{ include "falco-talon.namespace" . }}
   labels:
     {{- include "falco-talon.labels" . | nindent 4 }}
 stringData:
