feat(falco-talon): Configure Talon pod to not rollout on configmap changes, allow user to input rules.yaml directly, configure Talon to rollout on secret change, bump appVersion v0.2.0
Signed-off-by: Igor Eulalio <igor.eulalio@sysdig.com>

feat: trigger rollout based on secret change

Signed-off-by: Igor Eulalio <igor.eulalio@sysdig.com>

feat: remove rules_override.yaml file, add field so users can specify custom rules directly via values

Signed-off-by: Igor Eulalio <igor.eulalio@sysdig.com>

chore: bump chart version, update CHANGELOG.md and make docs

Signed-off-by: Igor Eulalio <igor.eulalio@sysdig.com>

feat: allow users to specify custom service accounts for deployment

Signed-off-by: Igor Eulalio <igor.eulalio@sysdig.com>

chore: modify changelog.md

Signed-off-by: Igor Eulalio <igor.eulalio@sysdig.com>

chore(deps): Bump lycheeverse/lychee-action from 2.0.2 to 2.1.0

Bumps [lycheeverse/lychee-action](https://github.com/lycheeverse/lychee-action) from 2.0.2 to 2.1.0.
- [Release notes](https://github.com/lycheeverse/lychee-action/releases)
- [Commits](https://github.com/lycheeverse/lychee-action/compare/7cd0af4c74a61395d455af97419279d86aafaede...f81112d0d2814ded911bd23e3beaa9dda9093915)

---
updated-dependencies:
- dependency-name: lycheeverse/lychee-action
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

feat: remove helm-generated labels and timestamp so that pod isn't recycled with a new update

Signed-off-by: Igor Eulalio <igor.eulalio@sysdig.com>

feat: trigger rollout based on secret change

Signed-off-by: Igor Eulalio <igor.eulalio@sysdig.com>

feat: remove rules_override.yaml file, add field so users can specify custom rules directly via values

Signed-off-by: Igor Eulalio <igor.eulalio@sysdig.com>

chore: bump chart version, update CHANGELOG.md and make docs

Signed-off-by: Igor Eulalio <igor.eulalio@sysdig.com>

feat: allow users to specify custom service accoun

--- a/charts/falco-talon/templates/configmap.yaml
+++ b/charts/falco-talon/templates/configmap.yaml
@@ -6,7 +6,7 @@ metadata:
     {{- include "falco-talon.labels" . | nindent 4 }}
 data:
   rules.yaml: |-
-{{- range $file := .Values.config.rulesFiles -}}
-{{ $fileContent := $.Files.Get $file }}
-{{- $fileContent | nindent 4 -}}
-{{- end -}}
+    {{ $.Files.Get "rules.yaml" | nindent 4 }}
+    {{- if .Values.config.rulesOverride }}
+    {{ .Values.config.rulesOverride | nindent 4 }}
+    {{- end }}
