--- a/charts/falco-talon/Chart.yaml
+++ b/charts/falco-talon/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
-appVersion: 0.1.1
+appVersion: 0.2.0
 description: React to the events from Falco
 name: falco-talon
-version: 0.1.3
+version: 0.2.0
 keywords:
   - falco
   - monitoring
@@ -14,3 +14,5 @@ sources:
 maintainers:
   - name: Issif
     email: issif+github@gadz.org
+  - name: IgorEulalio
+    email: igoreulalio.ie@gmail.com
