change the key for the rulesfiles range
Signed-off-by: Thomas Labarussias <issif+github@gadz.org>

--- a/charts/falco-talon/templates/configmap.yaml
+++ b/charts/falco-talon/templates/configmap.yaml
@@ -7,6 +7,6 @@ metadata:
 data:
   rules.yaml: |-
 {{- range $file := .Values.config.rulesFiles -}}
-{{ $fileContent := $.Files.Get . }}
+{{ $fileContent := $.Files.Get $file }}
 {{- $fileContent | nindent 4 -}}
 {{- end -}}
