--- a/charts/falco/values.yaml
+++ b/charts/falco/values.yaml
@@ -620,10 +620,10 @@ falco:
   # Falco rules files #
   #####################
 
-  # [Stable] `rules_file`
+  # [Stable] `rules_files`
   #
   # Falco rules can be specified using files or directories, which are loaded at
-  # startup. The name "rules_file" is maintained for backwards compatibility. If
+  # startup. The name "rules_files" is maintained for backwards compatibility. If
   # the entry is a file, it will be read directly. If the entry is a directory,
   # all files within that directory will be read in alphabetical order.
   #
