--- a/charts/falco-talon/values.yaml
+++ b/charts/falco-talon/values.yaml
@@ -10,7 +10,7 @@ image:
   # -- The image registry to pull from
   registry: falco.docker.scarf.sh
   # -- The image repository to pull from
-  repository: issif/falco-talon
+  repository: falcosecurity/falco-talon
   # -- Override the image tag to pull
   tag: ""
   # -- The image pull policy
